fixed animation progress bars, cleaned iphone 5 overflow

--- a/src/index.css
+++ b/src/index.css
@@ -651,7 +651,7 @@ h6 {
   font-weight: 600;
   font-size: 0.875rem;
   @media (min-width: 768px) {
-    font-size: 1rem
+    font-size: 1rem;
   }
 }
 
@@ -667,7 +667,10 @@ a:hover {
 }
 
 .animateProgressBar {
+  -webkit-animation: load 2s 0s;
+          animation: load 2s 0s;
   width: calc(100%);
+  transition-timing-function: ease-in-out;
 }
 
 @-webkit-keyframes load {
